[package]
name = "sgp4_wrapper"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
# opt-level = "z"

[dependencies]
sgp4 = "0.6"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "=0.2.81", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console"] }
